--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@19h47/list",
-	"version": "0.1.4",
+	"version": "0.1.5",
 	"description": "list",
 	"main": "dist/main.js",
 	"scripts": {
@@ -33,8 +33,8 @@
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb-base": "^14.0.0",
 		"eslint-config-standard": "^14.1.0",
-		"eslint-loader": "^3.0.3",
 		"eslint-import-resolver-webpack": "^0.12.1",
+		"eslint-loader": "^3.0.3",
 		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-node": "^10.0.0",
 		"eslint-plugin-promise": "^4.2.1",
@@ -47,7 +47,7 @@
 		"webpack-notifier": "^1.8.0"
 	},
 	"dependencies": {
-		"@19h47/keycode": "^1.0.6",
+		"@19h47/keycode": "3.0.0",
 		"core-js": "^3.6.4"
 	}
 }
