--- a/package.json
+++ b/package.json
@@ -30,16 +30,17 @@
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.0.6",
 		"clean-webpack-plugin": "^3.0.0",
-		"eslint": "^6.8.0",
+		"core-js": "^3.6.4",
+		"eslint": "^7.2.0",
 		"eslint-config-airbnb-base": "^14.1.0",
 		"eslint-config-standard": "^14.1.0",
 		"eslint-import-resolver-webpack": "^0.12.1",
-		"eslint-loader": "^3.0.3",
+		"eslint-loader": "^4.0.2",
 		"eslint-plugin-import": "^2.20.1",
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
-		"html-webpack-plugin": "^3.2.0",
+		"html-webpack-plugin": "^4.3.0",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.10.2",
@@ -48,6 +49,8 @@
 	},
 	"dependencies": {
 		"@19h47/keycode": "3.0.0",
-		"core-js": "^3.6.4"
+		"@19h47/prettier-config": "^1.0.0",
+		"eslint-config-prettier": "^6.11.0",
+		"prettier": "^2.0.5"
 	}
 }
