--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	},
 	"homepage": "https://github.com/19h47/19h47-list#readme",
 	"devDependencies": {
+		"@19h47/prettier-config": "^1.0.0",
 		"@babel/core": "^7.8.7",
 		"@babel/plugin-transform-runtime": "^7.8.3",
 		"@babel/preset-env": "^7.8.7",
@@ -33,6 +34,7 @@
 		"core-js": "^3.6.4",
 		"eslint": "^7.2.0",
 		"eslint-config-airbnb-base": "^14.1.0",
+		"eslint-config-prettier": "^6.11.0",
 		"eslint-config-standard": "^14.1.0",
 		"eslint-import-resolver-webpack": "^0.12.1",
 		"eslint-loader": "^4.0.2",
@@ -41,6 +43,7 @@
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"html-webpack-plugin": "^4.3.0",
+		"prettier": "^2.0.5",
 		"webpack": "^4.42.0",
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.10.2",
@@ -48,9 +51,6 @@
 		"webpack-notifier": "^1.8.0"
 	},
 	"dependencies": {
-		"@19h47/keycode": "3.0.0",
-		"@19h47/prettier-config": "^1.0.0",
-		"eslint-config-prettier": "^6.11.0",
-		"prettier": "^2.0.5"
+		"@19h47/keycode": "3.0.0"
 	}
 }
