--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"description": "list",
 	"main": "dist/main.js",
 	"scripts": {
-		"prod": "./bin/production",
-		"dev": "./bin/development",
-		"deploy": "./bin/deploy",
-		"start": "./bin/start"
+		"prod": "webpack --mode=production --config webpack/webpack.config.js",
+		"dev": "webpack --mode=development --config webpack/webpack.config.js",
+		"deploy": "npm login && npm run prod && npm publish",
+		"start": "webpack-dev-server --mode=development --hot --config webpack/webpack.config.js"
 	},
 	"repository": {
 		"type": "git",
@@ -24,30 +24,30 @@
 	"homepage": "https://github.com/19h47/19h47-list#readme",
 	"devDependencies": {
 		"@19h47/prettier-config": "^1.0.0",
-		"@babel/core": "^7.11.6",
-		"@babel/plugin-transform-runtime": "^7.11.5",
-		"@babel/preset-env": "^7.11.5",
-		"@babel/runtime": "^7.11.2",
+		"@babel/core": "^7.12.3",
+		"@babel/plugin-transform-runtime": "^7.12.1",
+		"@babel/preset-env": "^7.12.1",
+		"@babel/runtime": "^7.12.1",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.0.6",
 		"clean-webpack-plugin": "^3.0.0",
 		"core-js": "^3.6.4",
-		"eslint": "^7.9.0",
+		"eslint": "^7.11.0",
 		"eslint-config-airbnb-base": "^14.1.0",
-		"eslint-config-prettier": "^6.11.0",
+		"eslint-config-prettier": "^6.13.0",
 		"eslint-config-standard": "^14.1.0",
-		"eslint-import-resolver-webpack": "^0.12.1",
+		"eslint-import-resolver-webpack": "^0.13.0",
 		"eslint-loader": "^4.0.2",
-		"eslint-plugin-import": "^2.22.0",
+		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
-		"html-webpack-plugin": "^4.4.1",
+		"html-webpack-plugin": "^4.5.0",
 		"prettier": "^2.1.2",
 		"webpack": "^4.44.2",
 		"webpack-cli": "^3.3.12",
 		"webpack-dev-server": "^3.10.2",
-		"webpack-merge": "^5.1.4",
+		"webpack-merge": "^5.2.0",
 		"webpack-notifier": "^1.8.0"
 	},
 	"dependencies": {
