--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "@19h47/list",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"description": "list",
 	"main": "dist/main.js",
 	"scripts": {
 		"prod": "webpack --mode=production --config webpack/webpack.config.js",
 		"dev": "webpack --mode=development --config webpack/webpack.config.js",
 		"deploy": "yarn login && yarn prod && npm publish",
-		"start": "webpack-dev-server --mode=development --hot --config webpack/webpack.config.js"
+		"start": "webpack serve --config webpack/webpack.config.js --mode=development"
 	},
 	"repository": {
 		"type": "git",
@@ -24,31 +24,31 @@
 	"homepage": "https://github.com/19h47/19h47-list#readme",
 	"devDependencies": {
 		"@19h47/prettier-config": "^1.0.0",
-		"@babel/core": "^7.12.3",
-		"@babel/plugin-transform-runtime": "^7.12.1",
-		"@babel/preset-env": "^7.12.1",
-		"@babel/runtime": "^7.12.1",
+		"@babel/core": "^7.12.13",
+		"@babel/plugin-transform-runtime": "^7.12.15",
+		"@babel/preset-env": "^7.12.13",
+		"@babel/runtime": "^7.12.13",
 		"babel-eslint": "^10.1.0",
-		"babel-loader": "^8.0.6",
+		"babel-loader": "^8.2.2",
 		"clean-webpack-plugin": "^3.0.0",
-		"core-js": "^3.6.4",
-		"eslint": "^7.11.0",
-		"eslint-config-airbnb-base": "^14.1.0",
-		"eslint-config-prettier": "^6.13.0",
-		"eslint-config-standard": "^14.1.0",
+		"core-js": "^3.8.3",
+		"eslint": "^7.19.0",
+		"eslint-config-airbnb-base": "^14.2.1",
+		"eslint-config-prettier": "^7.2.0",
+		"eslint-config-standard": "^16.0.2",
 		"eslint-import-resolver-webpack": "^0.13.0",
 		"eslint-loader": "^4.0.2",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-standard": "^4.0.1",
-		"html-webpack-plugin": "^4.5.0",
-		"prettier": "^2.1.2",
-		"webpack": "^4.44.2",
-		"webpack-cli": "^3.3.12",
-		"webpack-dev-server": "^3.10.2",
-		"webpack-merge": "^5.2.0",
-		"webpack-notifier": "^1.8.0"
+		"eslint-plugin-standard": "^5.0.0",
+		"html-webpack-plugin": "^5.0.0",
+		"prettier": "^2.2.1",
+		"webpack": "^5.21.2",
+		"webpack-cli": "^4.5.0",
+		"webpack-dev-server": "^3.11.2",
+		"webpack-merge": "^5.7.3",
+		"webpack-notifier": "^1.13.0"
 	},
 	"dependencies": {
 		"@19h47/keycode": "3.0.3",
