--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-	"name": "@19h47/list",
-	"version": "0.2.2",
-	"description": "list",
-	"main": "dist/main.js",
-	"scripts": {
-		"prod": "webpack --mode=production --config webpack/webpack.config.js",
-		"dev": "webpack --mode=development --config webpack/webpack.config.js",
-		"deploy": "yarn login && yarn prod && npm publish",
-		"start": "webpack serve --config webpack/webpack.config.js --mode=development"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/19h47/19h47-list.git"
-	},
+	"name": "@19h47/listbox",
+	"version": "1.0.0",
+	"description": "Collapsible single-select listbox widget",
 	"keywords": [
 		"ES6"
 	],
-	"author": "Jérémy Levron <jeremylevron@19h47.fr> (https://19h47.fr)",
-	"license": "ISC",
+	"homepage": "https://github.com/19h47/19h47-listbox#readme",
 	"bugs": {
-		"url": "https://github.com/19h47/19h47-list/issues"
+		"url": "https://github.com/19h47/19h47-listbox/issues"
 	},
-	"homepage": "https://github.com/19h47/19h47-list#readme",
-	"devDependencies": {
-		"@19h47/prettier-config": "^1.0.0",
-		"@babel/core": "^7.12.13",
-		"@babel/plugin-transform-runtime": "^7.12.15",
-		"@babel/preset-env": "^7.12.13",
-		"@babel/runtime": "^7.12.13",
-		"babel-eslint": "^10.1.0",
-		"babel-loader": "^8.2.2",
-		"clean-webpack-plugin": "^3.0.0",
-		"core-js": "^3.8.3",
-		"eslint": "^7.19.0",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-prettier": "^7.2.0",
-		"eslint-config-standard": "^16.0.2",
-		"eslint-import-resolver-webpack": "^0.13.0",
-		"eslint-loader": "^4.0.2",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-node": "^11.0.0",
-		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-standard": "^5.0.0",
-		"html-webpack-plugin": "^5.0.0",
-		"prettier": "^2.2.1",
-		"webpack": "^5.21.2",
-		"webpack-cli": "^4.5.0",
-		"webpack-dev-server": "^3.11.2",
-		"webpack-merge": "^5.7.3",
-		"webpack-notifier": "^1.13.0"
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/19h47/19h47-listbox.git"
+	},
+	"license": "ISC",
+	"author": "Jérémy Levron <jeremylevron@19h47.fr> (https://19h47.fr)",
+	"main": "dist/main.js",
+	"scripts": {
+		"deploy": "yarn login && yarn prod && npm publish",
+		"dev": "webpack --mode=development --config webpack/webpack.config.js",
+		"prod": "webpack --mode=production --config webpack/webpack.config.js",
+		"start": "webpack serve --config webpack/webpack.config.js --mode=development"
 	},
 	"dependencies": {
 		"@19h47/keycode": "3.0.3",
-		"events": "^3.2.0"
+		"events": "^3.3.0"
+	},
+	"devDependencies": {
+		"@19h47/prettier-config": "^1.0.0",
+		"@babel/core": "^7.16.0",
+		"@babel/eslint-parser": "^7.16.3",
+		"@babel/eslint-plugin": "^7.14.5",
+		"@babel/plugin-transform-runtime": "^7.16.4",
+		"@babel/preset-env": "^7.16.4",
+		"@babel/runtime": "^7.16.3",
+		"babel-loader": "^8.2.3",
+		"clean-webpack-plugin": "^4.0.0",
+		"core-js": "^3.19.1",
+		"eslint": "^8.2.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-standard": "^16.0.3",
+		"eslint-import-resolver-webpack": "^0.13.2",
+		"eslint-plugin-import": "^2.25.3",
+		"eslint-plugin-node": "^11.0.0",
+		"eslint-plugin-promise": "^5.1.1",
+		"eslint-webpack-plugin": "^3.1.1",
+		"html-webpack-plugin": "^5.5.0",
+		"prettier": "^2.4.1",
+		"webpack": "^5.64.1",
+		"webpack-cli": "^4.9.1",
+		"webpack-dev-server": "^4.5.0",
+		"webpack-merge": "^5.8.0",
+		"webpack-notifier": "^1.14.1"
 	}
 }
