--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"dependencies": {
 		"@19h47/keycode": "3.0.3",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
 		"events": "^3.3.0"
 	},
 	"devDependencies": {
@@ -44,9 +45,9 @@
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-node": "^11.0.0",
 		"eslint-plugin-promise": "^6.1.1",
-		"eslint-webpack-plugin": "^3.2.0",
+		"eslint-webpack-plugin": "^4.0.1",
 		"html-webpack-plugin": "^5.5.0",
-		"prettier": "^2.8.0",
+		"prettier": "^3.0.0",
 		"webpack": "^5.75.0",
 		"webpack-cli": "^5.0.0",
 		"webpack-dev-server": "^4.11.1",
